toptracks.js creation

--- a/design/stats.html
+++ b/design/stats.html
@@ -6,6 +6,7 @@
     <title>Playlists</title>
     <link rel="stylesheet" href="../styles/style.css">
     <script src="../scripts/playlists.js"></script>
+    <script src="../scripts/toptracks.js"></script>
 </head>
 <body>
     <nav>
@@ -30,6 +31,8 @@
         <li>Profile Image: <span id="imgUrl"></span></li>
     </ul>
     </section>
+
+    
 
     <button id="get-top-tracks" class="primary" type="button">Get Top Tracks</button>
     <button id="getrecommendations" class="primary" type="button">Get Recs</button>
