--- a/design/login.html
+++ b/design/login.html
@@ -4,7 +4,7 @@
 <head>
     <title>Spotify API Tutorial</title>
     <meta charset="UTF-8">
-    <link rel="icon" href="https://open.spotifycdn.com/cdn/images/favicon.0f31d2ea.ico">
+    <link rel="stylesheet" href="../styles/style.css">
 </head>
 <body>
     <header>
@@ -12,8 +12,8 @@
         <nav>
           <a href="index.html">Home</a>
           <a href="generator.html">Generator</a>
-          <a href="playlists.html">Playlists</a>
           <a href="stats.html">Stats</a>
+          <a href="playlists.html">Playlists</a>
           <a href="help.html">Help</a>
           <a href="login.html"  class="selected" id="loginButton">Login</a>
       </nav>
